Set basic tmux and rearrange zsh in their correct categories

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -13,8 +13,8 @@ bind-key c command-prompt -p "Name of new window: " "new-window -n '%%'"
 # Use number to select pane
 bind r select-pane -t :.+\; display-panes
 
-
-
-
+##### Other settings #####
 # turn mouse on
 set-option -g mouse on
+# Set Vi keys in visual mode
+set-window-option -g mode-keys vi
