Increase tmux history

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,3 +18,5 @@ bind r select-pane -t :.+\; display-panes
 set-option -g mouse on
 # Set Vi keys in visual mode
 set-window-option -g mode-keys vi
+# Increase history limit
+set-option -g history-limit 5000
