Split pane by staying on the current directory

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,8 +3,9 @@
 set-option -g prefix C-s
 # Reload tmux config
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded.."
-# Window split
-bind-key v split-window -h
+# Window split with current path
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key b split-window -c '#{pane_current_path}'
 # Previous/next window movement
 bind-key l next-window
 bind-key h previous-window
