--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -14,6 +14,28 @@ bind-key c command-prompt -p "Name of new window: " "new-window -n '%%'"
 # Use number to select pane
 bind r select-pane -t :.+\; display-panes
 
+##### Decoration #####
+set -g status-interval 1
+# Overall status bar
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr bright
+# Window name
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+# Active window name
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+# Status
+set -g status-justify centre # center align window list
+set-option -g status-left '#[fg=colour178][#[fg=green,bright]#S#[fg=colour178]]'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=white]%Y-%m-%d'
+# Set window notification when activity happens
+setw -g monitor-activity on
+set -g visual-activity on
+
 ##### Other settings #####
 # turn mouse on
 set-option -g mouse on
@@ -21,3 +43,4 @@ set-option -g mouse on
 set-window-option -g mode-keys vi
 # Increase history limit
 set-option -g history-limit 5000
+
