--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,8 +1,8 @@
 ##### Shortcut keys #####
 # Change prefix to C-s (C-b is not acceptable -- Vim uses it)
 set-option -g prefix C-s
-# Reload tmux config
-bind R source-file ~/.tmux.conf \; display-message "Config reloaded.."
+# reload config
+bind R source-file ~/.tmux.conf \; display-message "C-s+R -> Config reloaded..."
 # Window split with current path
 bind-key v split-window -h -c '#{pane_current_path}'
 bind-key b split-window -c '#{pane_current_path}'
@@ -35,6 +35,9 @@ set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=re
 # Set window notification when activity happens
 setw -g monitor-activity on
 set -g visual-activity on
+# auto window rename
+set-window-option -g automatic-rename off
+set-option -g allow-rename off
 
 ##### Other settings #####
 # turn mouse on
@@ -43,4 +46,3 @@ set-option -g mouse on
 set-window-option -g mode-keys vi
 # Increase history limit
 set-option -g history-limit 5000
-
