--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,18 +16,12 @@ bind r select-pane -t :.+\; display-panes
 
 ##### Decoration #####
 set -g status-interval 1
-# Overall status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr bright
-# Window name
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-# Active window name
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+# Overall status bar bg=base02, fg=yellow
+set -g status-style bg=colour235,fg=colour136,bright
+# Window name fg=base0
+set -g window-status-style fg=colour244,bg=default,dim
+# Active window name fg=orange
+set -g window-status-current-style fg=colour166,bg=default,bright
 # Status
 set -g status-justify centre # center align window list
 set-option -g status-left '#[fg=colour178][#[fg=green,bright]#S#[fg=colour178]]'
