--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -33,6 +33,11 @@ set -g visual-activity on
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
 
+##### Copy to Buffer #####
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 ##### Other settings #####
 # turn mouse on
 set-option -g mouse on
