Enable more color to tmux.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,6 +32,8 @@ set -g visual-activity on
 # auto window rename
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
+# Allow better color. W/o this, powerline color status won't show.
+set -g default-terminal "screen-256color"
 
 ##### Copy to Buffer #####
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -45,3 +47,4 @@ set-option -g mouse on
 set-window-option -g mode-keys vi
 # Increase history limit
 set-option -g history-limit 5000
+
