Improve nvim settings

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -47,4 +47,6 @@ set-option -g mouse on
 set-window-option -g mode-keys vi
 # Increase history limit
 set-option -g history-limit 5000
+# Reduce escape time to help speed escape time in vim
+set-option -sg escape-time 10
 
