Make single quote default and add fzf.vim for its config

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "suggest.echodocSupport": true,
   "suggest.maxCompleteItemCount": 20,
+  "prettier.singleQuote": true,
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "typescript",
